--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # Files and directories created by pub
 .dart_tool/
+.idea
 .packages
 build/
 # If you're building an application, you may want to check-in your pubspec.lock
@@ -23,5 +24,5 @@ doc/api/
 *.js.deps
 *.js.map
 
-.flutter-plugins
-.flutter-plugins-dependencies
+*.iml
+
