--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: opaf
 description: "Open Pattern Format (OPAF) library for parsing and compiling pattern files."
-version: 1.0.0
+version: 0.1.0
 homepage: https://github.com/open-pattern-format/opaf-dart
 topics:
   - opaf
@@ -13,6 +13,7 @@ dependencies:
   expressions: ^0.2.5+1
   image: ^4.2.0
   path: ^1.8.3
+  pubspec_parse: ^1.3.0
   string_validator: ^1.0.2
   uuid: ^4.3.3
   version: ^3.0.0
